docs/DevOps/K8s/monitor.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: monitor-mafeifan-com
spec:
  rules:
    - host: monitor.mafeifan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-grafana
                port:
                  number: 3000
  ingressClassName: nginx
